--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-usevalidation",
+  "name": "@meksiabdou/react-native-usevalidation",
   "version": "1.0.0",
   "description": "react-native-usevalidation",
   "main": "lib/commonjs/index",
