--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@meksiabdou/react-native-usevalidation",
   "version": "1.0.0",
-  "description": "react-native-usevalidation",
+  "description": "hook validation form for react-native & expo",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
