--- a/example/package.json
+++ b/example/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "example",
+  "name": "@meksiabdou/react-native-usevalidation-example",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,18 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-dom": "18.1.0",
-    "react-native-web": "~0.18.9"
+    "@expo/metro-runtime": "~6.1.2",
+    "expo": "~54.0.18",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-web": "~0.21.0"
   },
+  "private": true,
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "@expo/webpack-config": "^0.17.2",
-    "babel-loader": "^8.1.0"
-  },
-  "private": true
+    "react-native-builder-bob": "^0.40.13",
+    "react-native-monorepo-config": "^0.1.9"
+  }
 }
